[project]
name = "splendor-backend"
version = "0.1.0"
description = "Splendor human-vs-AI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "numpy>=1.26",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
